fix: gap between navbar-search-active and navbar

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -228,6 +228,7 @@
   .navbar-search-active {
     padding-left: 10px;
     padding-right: 10px;
+    top: 85px;
   }
 
   .navbar-logo {
